[metadata]
name = mixtt
version = 0.1
summary = Mininet IXP Topology tester is for building and testing IXP network topologies
author = Christoff Visser
author-email = christoff@iij.ad.jp
platform = any

[files]
packages = mixtt
data_files = 
    etc/mixtt =
        etc/mixtt/topology.json
        etc/mixtt/umbrella.json

[entry_points]
console_scripts = 
    mixtt = mixtt.__main__:main